--- a/index.html
+++ b/index.html
@@ -142,20 +142,20 @@
                         </div>
                     </div>
                 </div>
-               <!--<div class="testimonial-item row align-items-center">
+               <div class="testimonial-item row align-items-center">
                     <div class="testimonial-img">
-                        <img src="./images/turkish series.jpeg" alt="Client Image">
+                        <img src="./images/Simayrose.jpeg" alt="Client Image">
                     </div>
                     <div class="testimonial-text" style="width: 100%">
                         <h3>SimaysRose</h3>
                         <h4>Member</h4>
                         <div class="icons">
-                            <a href="https://www.tiktok.com/@turkish_series11._?_t=8q6TMsBBW09&_r=1" class="fab fa-tiktok"></a>
-                            <a href="https://x.com/siu_m07?t=JpKPpYSTIYMUbqd_sbMXLg&s=09" class="fab fa-twitter"></a>
+                            <a href="https://www.tiktok.com/@simaysrose?_t=8q7anBtyNM1&_r=1" class="fab fa-tiktok"></a>
+                            <a href="https://x.com/simaysrose?s=11" class="fab fa-twitter"></a>
                             <a href="https://www.instagram.com/simaysrose?igsh=MmR4OG5yOXNjZnl6" class="fab fa-instagram"></a>
                         </div>
                     </div>
-                </div>-->
+                </div>
                 <div class="testimonial-item row align-items-center">
                     <div class="testimonial-img">
                         <img src="./images/kenza.jpeg" alt="Client Image">
