--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
 
             <div class="owl-carousel testimonials-carousel">
-                <div class="testimonial-item row align-items-center">
+               <!-- <div class="testimonial-item row align-items-center">
                     <div class="testimonial-img">
                         <img src="./images/simaybarlass100.jpeg" alt="Client Image">
                     </div>
@@ -115,7 +115,7 @@
                             <a href="https://www.instagram.com/simay_barlass100?igsh=MWxhZzRsdjkyYmdkcg==" class="fab fa-instagram"></a>
                         </div>
                     </div>
-                </div>
+                </div>-->
                 <div class="testimonial-item row align-items-center">
                     <div class="testimonial-img">
                         <img src="./images/justruyam.jpeg" alt="Client Image">
@@ -252,7 +252,7 @@
                 </div>
                 <div class="info">
                     <h3>FandomLove</h3>
-                    <span>Post creator & Editor</span>
+                    <span>Post creator</span>
                     <div class="icons">
                         <a href="https://www.tiktok.com/@multifandomloves?_t=8q5sWHWolns&_r=1" class="fab fa-tiktok"></a>
                         <a href="" class="fab fa-twitter"></a>
@@ -273,6 +273,20 @@
                     <div class="icons">
                         <a href="https://www.tiktok.com/@editsmerih?_t=8q5vG7eUcgH&_r=1" class="fab fa-tiktok"></a>
                         <a href="https://www.instagram.com/editsmerih?igsh=MXA4c3A2cHltM3NibA==" class="fab fa-instagram"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="card">
+                <div class="image">
+                    <img src="images/simaybarlass100.jpeg" alt="Team member 1">
+                </div>
+                <div class="info">
+                    <h3>Simay_Barlass100</h3>
+                    <span>Post creator</span>
+                    <div class="icons">
+                        <a href="https://www.instagram.com/simay_barlass100?igsh=MWxhZzRsdjkyYmdkcg==" class="fab fa-instagram"></a> 
                     </div>
                 </div>
             </div>
