--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                 </div>
                 <div class="info">
                     <h3>Simay_Barlass100</h3>
-                    <span>Post creator</span>
+                    <span>Editor</span>
                     <div class="icons">
                         <a href="https://www.instagram.com/simay_barlass100?igsh=MWxhZzRsdjkyYmdkcg==" class="fab fa-instagram"></a> 
                     </div>
